replaced nvidia with mesa

--- a/ansible/vars/main.yml
+++ b/ansible/vars/main.yml
@@ -35,7 +35,7 @@ required_packages:
   - code
   - imagemagick
   - papirus-icon-theme
-  - nvidia
+  - mesa
   - remmina
   - freerdp
   - fontconfig
